applications/minecraft/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    serviceMonitorDiscovery: enabled
