applications/minecraft/base/rcon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-minecraft-rcon
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01-issuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: minecraft.example.com
    external-dns.alpha.kubernetes.io/ttl: "120"

spec:
  rules:
  - host: minecraft.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-minecraft-rcon
            port:
              name: rcon
  tls:
  - hosts:
    - minecraft.example.com
    secretName: rcon-api-tls
